feat(i18n): make translations source-aware
Respect user resource overrides across quest and book translations, expose effective-source provenance in runtime audits, and package technical book repairs as compatibility resources.